--- a/lapor.html
+++ b/lapor.html
@@ -103,28 +103,31 @@
                 <img src="assets/line lapor.png" alt="">
                 <h2>SISTEM MANAJEMEN INTEGRASI</h2>
             </div>
-            <div class="cara-melapor-content" style="background-image: url('assets/kertas.png');">
+            <div class="cara-melapor-content">
+                <div class="bg-sat"></div>
                 <div class="cara-melapor-tutor">
-                    <h3><i class="fa-brands fa-readme"></i> Cara Melapor:</h3>
-                    <div class="tutor-lapor">
-                        <ol>
-                            <li>Klik tombol 'Lapor';</li>
-                            <li>Silahkan baca terlebih dahulu cara melapor;</li>
-                            <li>Setelah itu pilih masalah yang akan anda laporkan sesuai dengan bidangnya;</li>
-                            <li>Isi formulir pelaporan sesuai dengan informasi yang anda ketahui, hal yang harus
-                                diperhatikan:</li>
+                  <h3><i class="fa-brands fa-readme"></i> Cara Melapor:</h3>
+                  <div class="tutor-lapor">
+                    <ol>
+                      <li>Klik tombol 'Lapor';</li>
+                      <li>Silahkan baca terlebih dahulu cara melapor;</li>
+                      <li>Pilih masalah yang akan Anda laporkan sesuai dengan bidangnya;</li>
+                      <li>
+                        Isi formulir pelaporan sesuai dengan informasi yang Anda ketahui, hal-hal yang perlu diperhatikan:
+                        <div class="tambahan-ajabang">
                             <ol class="anak" type="a">
-                                <li>Semua kotak yang diberi tanda (*) wajib di isi;</li>
-                                <li>Pastikan informasi yang diberikan sedapat mungkin memenuhi unsur 4W + 1H;</li>
-                                <li>Jika anda memiliki bukti dalam bentuk file seperti foto atau dokumen lain, silahkan;
-                                </li>
-                            </ol>
-                            <li>Setelah selesai mengisi, silahkan klik tombol "Kirim" untuk melanjutkan atau klik tombol
-                                "Reset" untuk membatalkan proses pelaporan.</li>
-                        </ol>
-                    </div>
+                                <li>Semua kotak yang diberi tanda (*) wajib diisi;</li>
+                                <li>Pastikan informasi yang diberikan memenuhi unsur 4W + 1H (Who, What, When, Where, dan How);</li>
+                                <li>Jika Anda memiliki bukti tambahan seperti dokumen atau foto, silahkan unggah;</li>
+                              </ol>
+                        </div>
+                      </li>
+                      <li>Setelah selesai mengisi, klik tombol "Kirim" untuk melanjutkan atau klik tombol "Reset" untuk membatalkan pelaporan.</li>
+                    </ol>
+                  </div>
                 </div>
-            </div>
+              </
+              
         </div>
 
         <div class="container-layanan-pengaduan">
