--- a/faq.html
+++ b/faq.html
@@ -118,6 +118,37 @@
             <button id="startBtn" style="display: none;" onclick="showOptions()">Mulai</button>
         </div>
 
+        <footer>
+            <div class="footer-container">
+                <div class="footer-address">
+                    <h3>Balai Pengujian Mutu dan Sertifikasi Produk Hewan</h3>
+                    <p><a href="https://maps.app.goo.gl/FwhEJiirMgLarwDT8"> Jalan Pemuda No 29A Kecamatan Tanah Sareal
+                            Kota Bogor, Jawa Barat </a></p>
+                    <p>Email: <a href="mailto:bpmsph@pertanian.go.id">bpmsph@pertanian.go.id</a></p>
+                    <p>Tel/Fax: +62-251-8377111, +62-251-8353712</p>
+                </div>
+                <div class="footer-sosmed">
+                    <h3>Sosial Media & Chat</h3>
+                    <ul>
+                        <li><a href="https://web.facebook.com/bpmsph.ditjenpkh.5"><i class="fa-brands fa-facebook"></i>
+                                bpmsph.ditjenpkh.5</a></li>
+                        <li><a href="https://twitter.com/BPMSPH"><i class="fa-brands fa-x-twitter"></i> @BPMSPH</a></li>
+                        <li><a href="https://www.instagram.com/bpmsph_ditjenpkh/"><i class="fa-brands fa-instagram"></i>
+                                @bpmsph_ditjenpkh</a></li>
+                        <li><a href="https://www.youtube.com/@bpmsphbogorkementan231"><i
+                                    class="fa-brands fa-youtube"></i>
+                                BPMSPH Bogor Kementan</a></li>
+                        <li><a href="https://wa.me/08111109922"><i class="fa-brands fa-whatsapp"></i> 0811 1109 922</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>SNI ISO 9001:2015 - 37001:2016 - 45001:2018 SISTEM MANAJEMEN INTEGRASI - BALAI PENGUJIAN MUTU DAN
+                    SERTIFIKASI PRODUK HEWAN <span>Hak Cipta&copy;2024 BPMSPH. Semua Hak Dilindungi</span></p>
+            </div>
+        </footer>
+
     </main>
 
     <script src="faq.js"></script>
